<?xml version="1.0"?>
<package format="2">
  <name>aliencontrol</name>
  <version>0.1.0</version>
  <description>Start and stop external applications from within a ROS node</description>
  <maintainer email="aschaef@cs.uni-freiburg.de">Alexander Schaefer</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/acschaefer/aliencontrol</url>
  <author email="aschaef@cs.uni-freiburg.de">Alexander Schaefer</author>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
</package>
